--- a/ejercicios_practica/css/style1.css
+++ b/ejercicios_practica/css/style1.css
@@ -1,7 +1,48 @@
 * {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  }
+  
+  body {
+    width: 100%;
+  }
 
+  article {
+    width: fit-content;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #222435;
+  }
+
+  .price {
+    color: #edf2f4;
+    font-size: 25px;
+  }
+
+  .discount {
+    color: #2ec4b6;
+    font-size: 16px;
+  }
+
+  img {
+    border-radius: 20px;
+    margin: 5px;
+    background-color: #343c8a;
+  }
+
+  div {
+    background-color: green;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    border-radius: 20px;
+  }
+
+  a {
+    color: white;
+  }
+ 
